<resources>
    <string name="app_name">MyApplication</string>
    <string name="Name">Nombre</string>
    <string name="firstName">Apellido paterno</string>
    <string name="lastName">Apellido materno</string>
    <string name="userName">Usuario</string>
    <string name="Mail">Correo</string>
    <string name="Age">Edad</string>
    <string name="Number">Número</string>
    <string name="Gender">Género</string>
    <string name="Type">Tipo de persona</string>
    <string name="Password">Contraseña</string>
    <string name="website">Cargando...</string>
    <string name="writeName">Escribir nombre</string>
    <string name="writefirstName">Escribir apellido</string>
    <string name="writelastName">Escribir apellido</string>
    <string name="writeuserName">Escribir usuario</string>
    <string name="writeMail">Escribir correo</string>
    <string name="writeAge">Escribir edad</string>
    <string name="writeNumber">Escribir número</string>
    <string name="writeGender">Seleccionar género</string>
    <string name="writeGender1">Masculino</string>
    <string name="writeGender2">Femenino</string>
    <string name="writeType">Seleccionar rol</string>
    <string name="writeType1">Alumno</string>
    <string name="writeType2">Profesor</string>
    <string name="writePassword">Escribir contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="logout">Cerrar sesión</string>
    <string name="back">Volver</string>
    <string name="forgotPassword">Olvidé mi contraseña</string>
    <string name="recoverPassword">Recuperar contraseña</string>
    <string name="welcome">Welcome to the Jungle</string>
    <string name="menu_nuevo">Nuevo registro</string>
    <string name="menu_copiar">Cerrar sesión</string>
    <string name="list_name">Nombre</string>
    <string name="list_nameHint">Escribir el nombre</string>
    <string name="list_pass">Contraseña</string>
    <string name="list_passHint">Escribir la contraseña</string>
    <string name="list_image">Seleccione una foto de perfil :0</string>
    <string name="list_image1">Default</string>
    <string name="list_image2">Opcion 1</string>
    <string name="list_image3">Opcion 2</string>
    <string name="list_image4">Opcion 3</string>
    <string name="list_button">Enviar</string>
    <string name="list_button_takePhoto">Tomar foto</string>
    <string name="list_button_selectPhoto">Subir foto</string>
    <string name="list_button_next">Siguiente</string>
    <string name="list_button_back">Anterior</string>
    <string name="list_map_update">Actualizar</string>
    <string name="list_map_back">Volver</string>
</resources>