<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/jungla"
    tools:context=".List.ListViewActividad">
    <TextView
        android:id="@+id/textViewLM1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/welcome"
        android:textColor="#114010"
        android:textSize="34sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listViewLMContent"
        android:layout_width="250dp"
        android:layout_height="460dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLM1" />

    <ListView
        android:id="@+id/listViewLMMap"
        android:layout_width="50dp"
        android:layout_height="460dp"
        app:layout_constraintEnd_toStartOf="@+id/listViewLMEdit"
        app:layout_constraintTop_toBottomOf="@+id/textViewLM1" />

    <ListView
        android:id="@+id/listViewLMEdit"
        android:layout_width="50dp"
        android:layout_height="460dp"
        app:layout_constraintEnd_toStartOf="@+id/listViewLMRemove"
        app:layout_constraintTop_toBottomOf="@+id/textViewLM1" />

    <ListView
        android:id="@+id/listViewLMRemove"
        android:layout_width="50dp"
        android:layout_height="460dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLM1" />

    <Button
        android:id="@+id/buttonLMAnt"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#114010"
        android:textColor="#FFFFFF"
        android:text="@string/list_button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewLMContent"
        />

    <Button
        android:id="@+id/buttonLMSig"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#114010"
        android:textColor="#FFFFFF"
        android:text="@string/list_button_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewLMContent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>